# vulkan_ray_tracing_renderer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
wunder-renderer/: CMakeLists.txt
wunder-renderer/cmake/: Files.cmake  Variables.cmake
wunder-renderer/include/: application.h  application_properties.h  entry_point.h
wunder-renderer/include/assets/: asset.h  asset_importer_task.h  asset_manager.h  asset_storage.h  asset_types.h  camera_asset.h  gltf_mesh_serializer.h  gltf_scene_node_creator.h  gltf_scene_serializer.h  light_asset.h  material_asset.h  mesh_asset.h  scene_asset.h  scene_node.h  texture_asset.h
wunder-renderer/include/assets/components/: asset.h  camera_component.h  light_asset.h  light_component.h  material_asset.h  material_component.h  mesh_asset.h  mesh_component.h  scene_components.h  texture_asset.h  texture_component.h  transform_component.h
wunder-renderer/include/assets/gltf/: gltf_material_serializer.h  gltf_mesh_serializer.h  gltf_scene_serializer.h  gltf_texture_serializer.h
wunder-renderer/include/assets/serializers/: environment_map_serializer.h
wunder-renderer/include/assets/serializers/gltf/: camera_asset_builder.h  (+7 more)
wunder-renderer/include/camera/: camera.h
wunder-renderer/include/core/: aabb.h  async_task.h  input.h  input_manager.h  non_copyable.h  project.h  services_factory.h  string_utils.h  task_executor.h  time_unit.h  vector_map.h  wunder_features.h  wunder_filesystem.h  wunder_logger.h  wunder_macros.h  wunder_memory.h
wunder-renderer/include/entity/: entity.h
wunder-renderer/include/event/: asset_events.h  camera_events.h  core_events.h  event_controller.h  event_handler.h  event_handler.hpp  file_events.h  input_events.h  scene_events.h  vulkan_events.h  window_events.h
wunder-renderer/include/gla/: camera.h  graphic_layer_abstraction_factory.h  renderer_api.h  renderer_capabilities .h  renderer_properties.h
wunder-renderer/include/gla/vulkan/: vulkan.h  vulkan_base_pipeline.h  vulkan_base_renderer.h  vulkan_bottom_level_acceleration_structure.h  vulkan_buffer.h  vulkan_buffer_fwd.h  vulkan_command_pool.h  vulkan_context.h  vulkan_descriptor_set_manager.h  vulkan_device.h  vulkan_device_buffer.h  vulkan_extension_source.h  vulkan_framebuffer.h  vulkan_index_buffer.h  vulkan_layer_abstraction_factory.h  vulkan_log.h  vulkan_logical_device.h  vulkan_macros.h  vulkan_material.h  vulkan_memory_allocator.h  vulkan_physical_device.h  vulkan_physical_device_types.h  vulkan_pipeline.h  vulkan_renderer.h  vulkan_renderer_context.h  vulkan_rtx_renderer.h  vulkan_scene.h  vulkan_scene_manager.h  vulkan_shader.h  vulkan_shader_binding_table.h  vulkan_shader_types.h  vulkan_texture.h  vulkan_texture_fwd.h  vulkan_types.h  vulkan_vertex_buffer.h
wunder-renderer/include/scene/: scene.h  scene_load_task.h  scene_manager.h  scene_types.h
wunder-renderer/include/tinygltf/: tinygltf_utils.h
wunder-renderer/include/window/: window.h  window_factory.h  window_properties.h
wunder-renderer/include/window/glfw/: glfw_window.h
wunder-renderer/resources/shaders/: common.glsl  compress.glsl  enums.h  env_sampling.glsl  environment.h  globals.glsl  gltf_material.glsl  host_device.h  layouts.glsl  macros.h  material.h  pathtrace.comp  pathtrace.glsl  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  pathtraceShadow.rmiss  pbr_disney.glsl  pbr_gltf.glsl  punctual.glsl  random.glsl  shade_state.glsl  sun_and_sky.glsl  tonemapping.glsl  traceray_rtx.glsl  vertex.h
wunder-renderer/resources/shaders/rasterize/: passthrough.vert  post.frag
wunder-renderer/src/: application.cpp
wunder-renderer/src/assets/: asset_importer_task.cpp  asset_manager.cpp  asset_storage.cpp  asset_types.cpp  gltf_mesh_serializer.cpp  gltf_scene_node_creator.cpp  gltf_scene_serializer.cpp  scene_asset.cpp  texture_asset.cpp
wunder-renderer/src/assets/gltf/: gltf_asset_importer.cpp  gltf_camera_serializer.cpp  gltf_light_serializer.cpp  gltf_material_serializer.cpp  gltf_mesh_serializer.cpp  gltf_scene_node_creator.cpp  gltf_scene_serializer.cpp  gltf_texture_serializer.cpp
wunder-renderer/src/assets/serializers/: environment_map_serializer.cpp
wunder-renderer/src/camera/: camera.cpp
wunder-renderer/src/core/: aabb.cpp  input_manager.cpp  project.cpp  services_factory.cpp  string_utils.cpp  task_executor.cpp  time_unit.cpp  wunder_filesystem.cpp  wunder_logger.cpp
wunder-renderer/src/gla/: graphic_layer_abstraction_factory.cpp  renderer_api.cpp
wunder-renderer/src/gla/vulkan/: vma_implementation.cpp  vulkan.cpp  vulkan_base_pipeline.cpp  vulkan_base_renderer.cpp  vulkan_bottom_level_acceleration_structure.cpp  vulkan_buffer.cpp  vulkan_command_pool.cpp  vulkan_context.cpp  vulkan_descriptor_set_manager.cpp  vulkan_device.cpp  vulkan_device_buffer.cpp  vulkan_extension_source.cpp  vulkan_framebuffer.cpp  vulkan_index_buffer.cpp  vulkan_layer_abstraction_factory.cpp  vulkan_log.cpp  vulkan_logical_device.cpp  vulkan_material.cpp  vulkan_memory_allocator.cpp  vulkan_physical_device.cpp  vulkan_physical_device_types.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_renderer_context.cpp  vulkan_rtx_renderer.cpp  vulkan_scene.cpp  vulkan_shader.cpp  vulkan_shader_binding_table.cpp  vulkan_shader_types.cpp  vulkan_texture.cpp  vulkan_types.cpp  vulkan_vertex_buffer.cpp
wunder-renderer/src/scene/: scene.cpp  scene_load_task.cpp  scene_manager.cpp
wunder-renderer/src/tinygltf/: stb_image.cpp  tiny_gltf.cpp  tinygltf_utils.cpp
wunder-renderer/src/window/: window_factory.cpp
wunder-renderer/src/window/glfw/: glfw_window.cpp
wunder-sandbox/: CMakeLists.txt
wunder-sandbox/cmake/: FetchDependencies.cmake  Files.cmake  Variables.cmake
wunder-sandbox/include/: window_helper.h  wunder_application.h
wunder-sandbox/include/imgui/: imgui_helper.h  imgui_panel.h  imgui_right_side_panel.h  wunder_imgui.h
wunder-sandbox/resources/: cube.gltf
wunder-sandbox/src/: window_helper.cpp  wunder_application.cpp
wunder-sandbox/src/imgui/: imgui_helper.cpp  imgui_panel.cpp  imgui_right_side_panel.cpp  wunder_imgui.cpp
(+92 files in other folders)
